--- a/lab13/Views/Persona/Listar.cshtml
+++ b/lab13/Views/Persona/Listar.cshtml
@@ -36,7 +36,7 @@
     <tr>
         <td>@persona.PersonaID</td>
         <td>@persona.Nombre</td>
-        <td>@persona.Apellidos</td>
+        <td>@persona.Apellido</td>
         <td>@persona.FechaNac</td>
         <td>@persona.Direccion</td>
         <td>@persona.Email</td>
